--- a/Binaryzacja/Binaryzacja/packages.config
+++ b/Binaryzacja/Binaryzacja/packages.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="morelinq" version="1.0.16006" targetFramework="net40-Client" />
+  <package id="morelinq" version="1.1.0" targetFramework="net40-client" />
   <package id="Rx-Core" version="2.2.2" targetFramework="net40-Client" />
   <package id="Rx-Interfaces" version="2.2.2" targetFramework="net40-Client" />
   <package id="Rx-Linq" version="2.2.2" targetFramework="net40-Client" />
